    change the XML merger so that the XML ids no longer need to contain
    the prefix "ibatorgenerated_"
15. Many refactorings to make way for iBATIS3
16. IBATIS-605 - Added Informix Dialect
17. Added ability to set annotations on method parameters
18. Addedd support for "distinct" on select by example methods
19. Added new "or" method to example classes

-------------------------------------------------------------------------------
Version 1.2.1:

Bugs:
1. Fixed IbatorObjectFactory so that it will find internal classes on the
   context classloader.
2. Fixed IBATIS-565 - ill formed comment in the SqlMapConfigPlugin.

Enhancements:
1. Modified plugin methods for model fields, getters, and setters so that
   the plugin will know which type of class (Primary Key, Base Record, or
   Record with BLOBs) is being generated. 
2. Added methods to IntrospectedTable to get/set attributes.  This 
   allows plugin classes to maintain table based state between
   plugin calls.
3. Added "initialized" method to the plugin API.  This
   allows plugins to alter some of the fundamental code generation items
   (like the name of a generated class, for example).
4. Added an example plugin to show usage of the "initialized" method.

-------------------------------------------------------------------------------
Version 1.2.0:  Renamed to Ibator

Bugs:
1. Fixed the JavaTypeResolver so that an unsupported data type can be
   overridden by configuration.
2. Fixed IBATIS-523 - bug in EqualsHashCodePlugin
3. Fixed IBATIS-542 - upgrade build to Ant 1.7.1

Enhancements:
1. Ibator now includes a plugin machanism that you can use to extend or
   modify code generated by Ibator.  In most cases, you should be able
   to write plugins to replace any custom classes that subclass one of
   ibator's built-in generators.  Plugins are now the preferred method for
   extending Ibator and we recommend that you do not extend Ibator's
   built in generators unless absolutely necessary.